# quent

./: .gitignore  .readthedocs.yml  ADOPTION.md  API_PLAN.md  AUDIT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES.md  LICENSE  MANIFEST.in  PERFORMANCE.md  PHASE-1-BUILD-SYSTEM.md  PHASE-2-C-LEVEL-REPLACEMENTS.md  PHASE-3-ARCHITECTURAL-OPTIMIZATIONS.md  PHASE-4-DATA-STRUCTURES.md  PHASE-5-DOCUMENTATION.md  PHASE-6-TESTING-VERIFICATION.md  README.md  SECURITY.md  SPEC.md  TEST_EXP.md  THREAD_SAFETY.md  XYZ.md  codecov.yml  coverage.json  cython_setup.py  dev_requirements.txt  inspect_traceback.py  inspect_tracebacks.py  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  quent.py  run_tests.sh  setup.py
.claude/: settings.local.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
benchmarks/: _helpers.py  analyze_bytecode.py  analyze_specialization.py  bench_async.py  bench_chain_sizes.py  bench_core.py  bench_for_docs.py  bench_ops.py  bench_q_sizes.py  flamegraph_pyspy.sh  monitor_calls.py  profile_cprofile.py  profile_line.py  profile_scalene.py
cython_scripts/: build.sh  compile.sh
cython_src_archive/: _chain_wrappers.pxi  _filter.pxi  _frozen_chain.pxi  _generator.pxi  _link.pxi  _with.pxi  distribute.sh  quent.pxd  run_tests.sh
docs/: changelog.md  cookbook.md  errors.md  getting-started.md  hooks.py  index.md  integrations.md  recipes.md  reference.md  requirements.txt  troubleshooting.md  why-quent.md
docs/comparisons/: vs-others.md  vs-pipe.md  vs-tenacity.md  vs-unasync.md
docs/guide/: async.md  chains.md  context.md  error-handling.md  performance.md  pipelines.md  resilience.md  reuse.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: README.md  api_gateway.py  etl_pipeline.py  fan_out_fan_in.py  retry_backoff.py  testing_chains.py
first_prototypes/: __init__.py  iterative.py
hooks/: pre-commit
quent/: __init__.py  _async_utils.pxi  _buffer_ops.py  _chain.pxi  _chain.py  _chain.pyi  _chain_core.pxi  _chain_wrappers.pxi  _concurrency.py  _context.py  _control_flow.pxi  _core.py  _core.pyi  _debug.py  _diagnostics.pxi  _drive_gen_ops.py  _engine.py  _engine_async.py  _eval.py  _exc_meta.py  _filter.pxi  _foreach.pxi  _frozen_chain.pxi  _gather.pxi  _gather_ops.py  _generator.pxi  _generator.py  _helpers.pxi  _if_ops.py  _internal.py  _iter_ops.py  _iteration.pxi  _link.pxi  _link.py  _operators.pxi  _ops.py  _ops.pyi  _q.py  _traceback.py  _traceback.pyi  (+14 more)
quent/classes/: __init__.c  __init__.pxd  __init__.pyx
quent/custom/: __init__.c  __init__.pxd  __init__.pyx
quent/evaluate/: __init__.c  __init__.pxd  __init__.pyx
quent/helpers/: __init__.c  __init__.pxd  __init__.pyx
quent/link/: __init__.c  __init__.pxd  __init__.pyx
quent/quent/: __init__.c  __init__.pxd  __init__.pyx
scripts/: benchmark.py  build.sh  bump_version.sh  compile.sh  distribute.sh  fix_format.sh  inspect_traceback.py  run_profiling.sh  run_tests.sh  run_tests_parallel.py  setup.sh  tests_compile.sh  time_comparison.py  time_comparison_sync.py  time_func.py
src/: quent.c  quent.pyx
tests/: advanced_async_tests.py  advanced_exception_tests.py  adversarial_input_tests.py  adversarial_tests.py  asymmetry_tests.py  async_edge_cases_tests.py  async_reduce_filter_double_tests.py  async_transition_explosion_tests.py  async_transition_tests.py  attribute_tests.py  audit_core_chain_gap_tests.py  audit_h7_l5_l12_tests.py  audit_m8_m9_m13_m14_tests.py  audit_ops_negative_tests.py  audit_traceback_gap_tests.py  audit_x_guard_tests.py  autorun_ensure_future_tests.py  bricks.py  bridge_meta_tests.py  bridge_runner.py  bridge_tests.py  buffer_tests.py  bug_regression_tests.py  bugfix_regression_expanded_tests.py  bugfix_regression_matrix_tests.py  bugfix_tests.py  callable_matrix_tests.py  calling_convention_matrix_tests.py  calling_convention_tests.py  cascade_operations_tests.py  chain_async_tests.py  chain_behavior_tests.py  chain_construction_tests.py  chain_features_tests.py  chain_run_tests.py  clone_advanced_tests.py  clone_tests.py  cm_protocol_matrix_tests.py  complex_chain_patterns_tests.py  comprehensive_api_surface_tests.py  (+162 more)
