[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "quent"
version = "3.1.0"
authors = [{ name = "Ohad Drukman", email = "drukmano@icloud.com" }]
description = "Fluent chain interface for Python with transparent sync/async handling. Write pipeline code once -- Quent automatically detects coroutines and handles them. Pure Python, zero dependencies."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
keywords = [
    'chain', 'chaining', 'pipeline', 'fluent', 'pipe',
    'async', 'sync', 'asyncio', 'coroutine', 'await',
    'pure-python',
    'performance',
    'function-composition', 'middleware',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    "Framework :: AsyncIO",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Documentation = "https://quent.readthedocs.io"
Repository = "https://github.com/drukmano/quent"
Changelog = "https://github.com/drukmano/quent/releases"
Issues = "https://github.com/drukmano/quent/issues"

[tool.setuptools]
packages = ["quent"]

[tool.setuptools.package-data]
quent = ["py.typed", "*.pyi"]

[tool.coverage.run]
source = ["quent"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "build>=1.4",
    "coverage>=7.13",
    "twine>=6.2",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific rules
]
ignore = [
    "E741",    # ambiguous variable name (single-letter vars used intentionally)
    "B905",    # zip-without-strict (not always appropriate)
    "SIM108",  # ternary instead of if-else (readability preference)
    "UP007",   # use X | Y for union types (already used, but some edge cases)
]

[tool.ruff.lint.isort]
known-first-party = ["quent"]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
